[package]
name = "boosttorrent-redux"
version = "0.1.0"
authors = ["Thomas Harris <teh019283@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.3"
rand = "0.7.3"
async-std = "1.5.0"
crossbeam = "0.7.3"
futures = "0.3.4"
flume = "0.7.1"
lazy_static = "1.4.0"
